# fasta

./: .gitignore  CMakeLists.txt
data/: assembly.fasta  file.txt  file2.txt
include/: Aminoacids.h  FastaFile.h  FastaFormat.h  FastaHeader.h  FastaParser.h  Nucleotide.h  Sequence.h
lib/: Aminoacid.cpp  FastaFile.cpp  FastaFormat.cpp  FastaHeader.cpp  FastaParser.cpp  Nucleotide.cpp  Sequence.cpp
src/: Unittest.cpp  main.cpp
